# sqnc

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
sqnc-macros/: Cargo.toml
sqnc-macros/src/: lib.rs
src/: compress.rs  concat.rs  copied.rs  derive.rs  impl_array.rs  impl_ndarray.rs  impl_range.rs  impl_slice.rs  impl_vec_deque.rs  lib.rs  map.rs  repeat.rs  rev.rs  select.rs  traits.rs  uniform.rs  util.rs  wrapper.rs  zip.rs
tests/: derive.rs
