[package]
name = "sqnc"
version = "1.0.0"
authors = ["Evalf <info@evalf.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/evalf/sqnc"
description = "Traits and adaptors for sequences"
keywords = ["sequence", "no_std"]
rust-version = "1.64"

[features]
alloc = []

[dependencies]
ndarray = { version = "0.15", optional = true }

[package.metadata.docs.rs]
all-features = true
